output/parser.output
Terminals unused in grammar

   NS
   BOGUS


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt
    3          | stmt_list stmt

    4 stmt: ENDL
    5     | expr_list ENDL
    6     | func_stmt
    7     | proc_stmt
    8     | print
    9     | read
   10     | znach_value ENDL
   11     | decl

   12 expr: function_call
   13     | identifier '[' expr_list ']'
   14     | identifier
   15     | '(' expr ')'
   16     | INT_CONST
   17     | CHAR_CONST
   18     | STRING_CONST
   19     | DOUBLE_CONST
   20     | BOOL_CONST
   21     | expr ASSMNT expr
   22     | expr PLUS expr
   23     | expr MINUS expr
   24     | expr MUL expr
   25     | expr DIV expr
   26     | expr POW expr
   27     | expr GT expr
   28     | expr LT expr
   29     | expr GTEQ expr
   30     | expr LTEQ expr
   31     | expr NEQ expr
   32     | expr EQ expr
   33     | NET
   34     | DA
   35     | MINUS expr

   36 function_call: identifier '(' expr_list ')'

   37 expr_list: expr
   38          | expr_list ',' expr

   39 identifier: ID

   40 decl: atomic_type enum_atomic_identifier_list ENDL
   41     | array_type enum_array_identifier_list ENDL

   42 enum_atomic_identifier_list: identifier
   43                            | enum_atomic_identifier_list ',' identifier

   44 enum_array_identifier_list: identifier '[' dimensions ']'
   45                           | enum_array_identifier_list ',' identifier '[' dimensions ']'

   46 func_stmt: ALG atomic_type identifier ENDL NACH ENDL stmt_list KON ENDL
   47          | ALG atomic_type identifier '(' param_list ')' ENDL NACH stmt_list KON ENDL

   48 proc_stmt: ALG identifier ENDL NACH ENDL stmt_list KON ENDL
   49          | ALG identifier '(' param_list ')' ENDL NACH ENDL stmt_list KON ENDL

   50 param_list: param
   51           | param_list ';' param

   52 znach_value: ZNACH ASSMNT expr

   53 param: arg_value
   54      | rez_value

   55 arg_value: ARG atomic_type enum_atomic_identifier_list
   56          | ARG array_type enum_array_identifier_list

   57 rez_value: REZ array_type enum_array_identifier_list
   58          | REZ atomic_type enum_atomic_identifier_list

   59 dimensions: INT_CONST ':' INT_CONST
   60           | INT_CONST ':' identifier
   61           | dimensions ',' INT_CONST ':' INT_CONST
   62           | dimensions ',' INT_CONST ':' identifier

   63 array_type: CELTAB
   64           | VESCHTAB
   65           | SIMTAB
   66           | LITTAB
   67           | LOGTAB

   68 atomic_type: CEL
   69            | VESCH
   70            | SIM
   71            | LIT
   72            | LOG

   73 print: VYVOD expr_list ENDL

   74 read: VVOD expr_list ENDL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15 36 47 49
')' (41) 15 36 47 49
',' (44) 38 43 45 61 62
':' (58) 59 60 61 62
';' (59) 51
'[' (91) 13 44 45
']' (93) 13 44 45
error (256)
BOOL_CONST (258) 20
INT_CONST (259) 16 59 60 61 62
STRING_CONST (260) 18
DOUBLE_CONST (261) 19
CHAR_CONST (262) 17
ID (263) 39
ALG (264) 46 47 48 49
ARG (265) 55 56
VVOD (266) 74
VESCH (267) 69
VESCHTAB (268) 64
VYVOD (269) 73
DA (270) 34
ZNACH (271) 52
KON (272) 46 47 48 49
LIT (273) 71
LITTAB (274) 66
LOG (275) 72
LOGTAB (276) 67
NACH (277) 46 47 48 49
NET (278) 33
NS (279)
REZ (280) 57 58
SIM (281) 70
SIMTAB (282) 65
CEL (283) 68
CELTAB (284) 63
ENDL (285) 4 5 10 40 41 46 47 48 49 73 74
BOGUS (286)
ASSMNT (287) 21 52
EQ (288) 32
NEQ (289) 31
LTEQ (290) 30
GTEQ (291) 29
LT (292) 28
GT (293) 27
MINUS (294) 23 35
PLUS (295) 22
DIV (296) 25
MUL (297) 24
POW (298) 26
UMINUS (299)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
stmt_list (54)
    on left: 2 3, on right: 1 3 46 47 48 49
stmt (55)
    on left: 4 5 6 7 8 9 10 11, on right: 2 3
expr (56)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
    30 31 32 33 34 35, on right: 15 21 22 23 24 25 26 27 28 29 30 31
    32 35 37 38 52
function_call (57)
    on left: 36, on right: 12
expr_list (58)
    on left: 37 38, on right: 5 13 36 38 73 74
identifier (59)
    on left: 39, on right: 13 14 36 42 43 44 45 46 47 48 49 60 62
decl (60)
    on left: 40 41, on right: 11
enum_atomic_identifier_list (61)
    on left: 42 43, on right: 40 43 55 58
enum_array_identifier_list (62)
    on left: 44 45, on right: 41 45 56 57
func_stmt (63)
    on left: 46 47, on right: 6
proc_stmt (64)
    on left: 48 49, on right: 7
param_list (65)
    on left: 50 51, on right: 47 49 51
znach_value (66)
    on left: 52, on right: 10
param (67)
    on left: 53 54, on right: 50 51
arg_value (68)
    on left: 55 56, on right: 53
rez_value (69)
    on left: 57 58, on right: 54
dimensions (70)
    on left: 59 60 61 62, on right: 44 45 61 62
array_type (71)
    on left: 63 64 65 66 67, on right: 41 56 57
atomic_type (72)
    on left: 68 69 70 71 72, on right: 40 46 47 55 58
print (73)
    on left: 73, on right: 8
read (74)
    on left: 74, on right: 9


state 0

    0 $accept: . program $end

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    ALG           shift, and go to state 7
    VVOD          shift, and go to state 8
    VESCH         shift, and go to state 9
    VESCHTAB      shift, and go to state 10
    VYVOD         shift, and go to state 11
    DA            shift, and go to state 12
    ZNACH         shift, and go to state 13
    LIT           shift, and go to state 14
    LITTAB        shift, and go to state 15
    LOG           shift, and go to state 16
    LOGTAB        shift, and go to state 17
    NET           shift, and go to state 18
    SIM           shift, and go to state 19
    SIMTAB        shift, and go to state 20
    CEL           shift, and go to state 21
    CELTAB        shift, and go to state 22
    ENDL          shift, and go to state 23
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    program        go to state 26
    stmt_list      go to state 27
    stmt           go to state 28
    expr           go to state 29
    function_call  go to state 30
    expr_list      go to state 31
    identifier     go to state 32
    decl           go to state 33
    func_stmt      go to state 34
    proc_stmt      go to state 35
    znach_value    go to state 36
    array_type     go to state 37
    atomic_type    go to state 38
    print          go to state 39
    read           go to state 40


state 1

   20 expr: BOOL_CONST .

    $default  reduce using rule 20 (expr)


state 2

   16 expr: INT_CONST .

    $default  reduce using rule 16 (expr)


state 3

   18 expr: STRING_CONST .

    $default  reduce using rule 18 (expr)


state 4

   19 expr: DOUBLE_CONST .

    $default  reduce using rule 19 (expr)


state 5

   17 expr: CHAR_CONST .

    $default  reduce using rule 17 (expr)


state 6

   39 identifier: ID .

    $default  reduce using rule 39 (identifier)


state 7

   46 func_stmt: ALG . atomic_type identifier ENDL NACH ENDL stmt_list KON ENDL
   47          | ALG . atomic_type identifier '(' param_list ')' ENDL NACH stmt_list KON ENDL
   48 proc_stmt: ALG . identifier ENDL NACH ENDL stmt_list KON ENDL
   49          | ALG . identifier '(' param_list ')' ENDL NACH ENDL stmt_list KON ENDL

    ID     shift, and go to state 6
    VESCH  shift, and go to state 9
    LIT    shift, and go to state 14
    LOG    shift, and go to state 16
    SIM    shift, and go to state 19
    CEL    shift, and go to state 21

    identifier   go to state 41
    atomic_type  go to state 42


state 8

   74 read: VVOD . expr_list ENDL

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 29
    function_call  go to state 30
    expr_list      go to state 43
    identifier     go to state 32


state 9

   69 atomic_type: VESCH .

    $default  reduce using rule 69 (atomic_type)


state 10

   64 array_type: VESCHTAB .

    $default  reduce using rule 64 (array_type)


state 11

   73 print: VYVOD . expr_list ENDL

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 29
    function_call  go to state 30
    expr_list      go to state 44
    identifier     go to state 32


state 12

   34 expr: DA .

    $default  reduce using rule 34 (expr)


state 13

   52 znach_value: ZNACH . ASSMNT expr

    ASSMNT  shift, and go to state 45


state 14

   71 atomic_type: LIT .

    $default  reduce using rule 71 (atomic_type)


state 15

   66 array_type: LITTAB .

    $default  reduce using rule 66 (array_type)


state 16

   72 atomic_type: LOG .

    $default  reduce using rule 72 (atomic_type)


state 17

   67 array_type: LOGTAB .

    $default  reduce using rule 67 (array_type)


state 18

   33 expr: NET .

    $default  reduce using rule 33 (expr)


state 19

   70 atomic_type: SIM .

    $default  reduce using rule 70 (atomic_type)


state 20

   65 array_type: SIMTAB .

    $default  reduce using rule 65 (array_type)


state 21

   68 atomic_type: CEL .

    $default  reduce using rule 68 (atomic_type)


state 22

   63 array_type: CELTAB .

    $default  reduce using rule 63 (array_type)


state 23

    4 stmt: ENDL .

    $default  reduce using rule 4 (stmt)


state 24

   35 expr: MINUS . expr

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 46
    function_call  go to state 30
    identifier     go to state 32


state 25

   15 expr: '(' . expr ')'

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 47
    function_call  go to state 30
    identifier     go to state 32


state 26

    0 $accept: program . $end

    $end  shift, and go to state 48


state 27

    1 program: stmt_list .
    3 stmt_list: stmt_list . stmt

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    ALG           shift, and go to state 7
    VVOD          shift, and go to state 8
    VESCH         shift, and go to state 9
    VESCHTAB      shift, and go to state 10
    VYVOD         shift, and go to state 11
    DA            shift, and go to state 12
    ZNACH         shift, and go to state 13
    LIT           shift, and go to state 14
    LITTAB        shift, and go to state 15
    LOG           shift, and go to state 16
    LOGTAB        shift, and go to state 17
    NET           shift, and go to state 18
    SIM           shift, and go to state 19
    SIMTAB        shift, and go to state 20
    CEL           shift, and go to state 21
    CELTAB        shift, and go to state 22
    ENDL          shift, and go to state 23
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    $default  reduce using rule 1 (program)

    stmt           go to state 49
    expr           go to state 29
    function_call  go to state 30
    expr_list      go to state 31
    identifier     go to state 32
    decl           go to state 33
    func_stmt      go to state 34
    proc_stmt      go to state 35
    znach_value    go to state 36
    array_type     go to state 37
    atomic_type    go to state 38
    print          go to state 39
    read           go to state 40


state 28

    2 stmt_list: stmt .

    $default  reduce using rule 2 (stmt_list)


state 29

   21 expr: expr . ASSMNT expr
   22     | expr . PLUS expr
   23     | expr . MINUS expr
   24     | expr . MUL expr
   25     | expr . DIV expr
   26     | expr . POW expr
   27     | expr . GT expr
   28     | expr . LT expr
   29     | expr . GTEQ expr
   30     | expr . LTEQ expr
   31     | expr . NEQ expr
   32     | expr . EQ expr
   37 expr_list: expr .

    ASSMNT  shift, and go to state 50
    EQ      shift, and go to state 51
    NEQ     shift, and go to state 52
    LTEQ    shift, and go to state 53
    GTEQ    shift, and go to state 54
    LT      shift, and go to state 55
    GT      shift, and go to state 56
    MINUS   shift, and go to state 57
    PLUS    shift, and go to state 58
    DIV     shift, and go to state 59
    MUL     shift, and go to state 60
    POW     shift, and go to state 61

    $default  reduce using rule 37 (expr_list)


state 30

   12 expr: function_call .

    $default  reduce using rule 12 (expr)


state 31

    5 stmt: expr_list . ENDL
   38 expr_list: expr_list . ',' expr

    ENDL  shift, and go to state 62
    ','   shift, and go to state 63


state 32

   13 expr: identifier . '[' expr_list ']'
   14     | identifier .
   36 function_call: identifier . '(' expr_list ')'

    '['  shift, and go to state 64
    '('  shift, and go to state 65

    $default  reduce using rule 14 (expr)


state 33

   11 stmt: decl .

    $default  reduce using rule 11 (stmt)


state 34

    6 stmt: func_stmt .

    $default  reduce using rule 6 (stmt)


state 35

    7 stmt: proc_stmt .

    $default  reduce using rule 7 (stmt)


state 36

   10 stmt: znach_value . ENDL

    ENDL  shift, and go to state 66


state 37

   41 decl: array_type . enum_array_identifier_list ENDL

    ID  shift, and go to state 6

    identifier                  go to state 67
    enum_array_identifier_list  go to state 68


state 38

   40 decl: atomic_type . enum_atomic_identifier_list ENDL

    ID  shift, and go to state 6

    identifier                   go to state 69
    enum_atomic_identifier_list  go to state 70


state 39

    8 stmt: print .

    $default  reduce using rule 8 (stmt)


state 40

    9 stmt: read .

    $default  reduce using rule 9 (stmt)


state 41

   48 proc_stmt: ALG identifier . ENDL NACH ENDL stmt_list KON ENDL
   49          | ALG identifier . '(' param_list ')' ENDL NACH ENDL stmt_list KON ENDL

    ENDL  shift, and go to state 71
    '('   shift, and go to state 72


state 42

   46 func_stmt: ALG atomic_type . identifier ENDL NACH ENDL stmt_list KON ENDL
   47          | ALG atomic_type . identifier '(' param_list ')' ENDL NACH stmt_list KON ENDL

    ID  shift, and go to state 6

    identifier  go to state 73


state 43

   38 expr_list: expr_list . ',' expr
   74 read: VVOD expr_list . ENDL

    ENDL  shift, and go to state 74
    ','   shift, and go to state 63


state 44

   38 expr_list: expr_list . ',' expr
   73 print: VYVOD expr_list . ENDL

    ENDL  shift, and go to state 75
    ','   shift, and go to state 63


state 45

   52 znach_value: ZNACH ASSMNT . expr

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 76
    function_call  go to state 30
    identifier     go to state 32


state 46

   21 expr: expr . ASSMNT expr
   22     | expr . PLUS expr
   23     | expr . MINUS expr
   24     | expr . MUL expr
   25     | expr . DIV expr
   26     | expr . POW expr
   27     | expr . GT expr
   28     | expr . LT expr
   29     | expr . GTEQ expr
   30     | expr . LTEQ expr
   31     | expr . NEQ expr
   32     | expr . EQ expr
   35     | MINUS expr .

    $default  reduce using rule 35 (expr)


state 47

   15 expr: '(' expr . ')'
   21     | expr . ASSMNT expr
   22     | expr . PLUS expr
   23     | expr . MINUS expr
   24     | expr . MUL expr
   25     | expr . DIV expr
   26     | expr . POW expr
   27     | expr . GT expr
   28     | expr . LT expr
   29     | expr . GTEQ expr
   30     | expr . LTEQ expr
   31     | expr . NEQ expr
   32     | expr . EQ expr

    ASSMNT  shift, and go to state 50
    EQ      shift, and go to state 51
    NEQ     shift, and go to state 52
    LTEQ    shift, and go to state 53
    GTEQ    shift, and go to state 54
    LT      shift, and go to state 55
    GT      shift, and go to state 56
    MINUS   shift, and go to state 57
    PLUS    shift, and go to state 58
    DIV     shift, and go to state 59
    MUL     shift, and go to state 60
    POW     shift, and go to state 61
    ')'     shift, and go to state 77


state 48

    0 $accept: program $end .

    $default  accept


state 49

    3 stmt_list: stmt_list stmt .

    $default  reduce using rule 3 (stmt_list)


state 50

   21 expr: expr ASSMNT . expr

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 78
    function_call  go to state 30
    identifier     go to state 32


state 51

   32 expr: expr EQ . expr

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 79
    function_call  go to state 30
    identifier     go to state 32


state 52

   31 expr: expr NEQ . expr

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 80
    function_call  go to state 30
    identifier     go to state 32


state 53

   30 expr: expr LTEQ . expr

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 81
    function_call  go to state 30
    identifier     go to state 32


state 54

   29 expr: expr GTEQ . expr

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 82
    function_call  go to state 30
    identifier     go to state 32


state 55

   28 expr: expr LT . expr

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 83
    function_call  go to state 30
    identifier     go to state 32


state 56

   27 expr: expr GT . expr

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 84
    function_call  go to state 30
    identifier     go to state 32


state 57

   23 expr: expr MINUS . expr

    BOOL_CONST    shift, and go to state 1
    INT_CONST     shift, and go to state 2
    STRING_CONST  shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CHAR_CONST    shift, and go to state 5
    ID            shift, and go to state 6
    DA            shift, and go to state 12
    NET           shift, and go to state 18
    MINUS         shift, and go to state 24
    '('           shift, and go to state 25

    expr           go to state 85
    function_call  go to state 30
    identifier     go to state 32


state 58

   22 expr: expr PLUS . expr
